test/parsing/errors/unknownPragma.compopts
--detailed-errors # unknownPragma-detailed.good
--no-detailed-errors # unknownPragma-brief.good
